responsive for section one is done

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       <!--content wraper-->
       <!--header start-->
       <header
-        class="text-white bg-fixed md:h-headerh sm:h-max sm:pb-20"
+        class="text-white bg-cover md:h-headerh sm:h-headerh sm:pb-20 rounded-b-lg"
         style="background-image: url(/src/img/Path.png)"
       >
         <!--nav start-->
@@ -82,7 +82,7 @@
         </div>
         <div class="relative hidden md:block">
           <img
-            class="absolute mt-4 w-full object-cover p-4"
+            class="absolute w-full object-cover"
             src="/src/img/screen1 1.png"
             alt=""
           />
@@ -90,29 +90,29 @@
       </header>
       <!--header end-->
 
-      <main class="lg:pt-72 md:pt-60 sm:pt-20">
+      <main class="lg:pt-36 md:pt-0 sm:pt-14">
         <!--section one start-->
-        <section class="mx-8">
-          <div class="md:grid md:grid-cols-2 md:gap-10 sm:grid-cols-1">
-            <div class="self-center">
+        <section class="mx-8 md:pt-72">
+          <div class="grid md:grid-cols-2 gap-10 sm:grid-cols-1 sm:gap-10">
+            <div class="">
               <img class="w-full" src="/src/img/Capture1.PNG" alt="" />
             </div>
-            <div class="sm:mt-10">
-              <h2 class="text-base uppercase text-green-800 mb-2">About us</h2>
-              <h3 class="text-xl font-bold mb-2">
+            <div class="">
+              <h2 class="text-lg uppercase text-green-800 mb-2">About us</h2>
+              <h3 class="text-lg font-semibold mb-2">
                 Let us share with you a little bit of history.
               </h3>
-              <p class="text-lg mb-4">
+              <p class="text-base mb-4 text-gray-500">
                 Fonimu was founded by a group of enthusiasts who believe NLP can
                 revolutionize access to services in Africa. This has been the
                 core of our drive. Today, we are a community solving the
                 challenging Swahili NLP problems that will impact millions of
                 people across Africa, as well as look toward the future.
               </p>
-              <h3 class="text-base font-bold mb-2">
+              <h3 class="text-lg font-semibold mb-2">
                 What we want to accomplish
               </h3>
-              <p class="text-lg">
+              <p class="text-base text-gray-500">
                 We’re trying to build a Swahili NLP hub, and we're doing it with
                 the hope of having a huge, positive impact in Africa. That means
                 at Fonimu, you'll find APIs for various Swahili NLP tasks,
@@ -126,7 +126,7 @@
         </section>
         <!--section one end-->
         <!--section two start-->
-        <section class="mx-8 py-20">
+        <section class="mx-8 py-32">
           <div class="text-center">
             <h1 class="text-4xl font-bold mb-4">Problems we are solving</h1>
             <p class="mb-6">
