--- a/src/index.html
+++ b/src/index.html
@@ -127,26 +127,28 @@
         <!--section one end-->
         <!--section two start-->
         <section class="mx-8 py-32">
-          <div class="text-center">
-            <h1 class="text-4xl font-bold mb-4">Problems we are solving</h1>
-            <p class="mb-6">
+          <div class="text-center w-3/5 mx-auto">
+            <h1 class="text-2xl font-bold mb-4">Problems we are solving</h1>
+            <p class="mb-6 text-xl">
               The Swahili NLP problems we work on are hard, and we want as many
               of the great minds thinking about them as possible. Below are the
               problems we are working on;
             </p>
           </div>
-          <div class="grid lg:grid-cols-2 gap-4 mb-4">
-            <div class="flex gap-4 border border-gray-400 p-4 sm:rounded">
+          <div class="grid md:grid-cols-2 gap-4 mb-4">
+            <div
+              class="flex md:flex-row gap-4 border border-gray-400 p-4 sm:rounded sm:flex-col"
+            >
               <div>
                 <img
-                  class="w-56 h-11"
+                  class="md:w-56 h-11"
                   src="/src/img/icon-area (5).png"
                   alt=""
                 />
               </div>
               <div>
-                <h3 class="text-xl font-bold mb-2">Text Summarisation</h3>
-                <p>
+                <h3 class="text-lg font-semibold mb-2">Text Summarisation</h3>
+                <p class="text-base text-gray-500">
                   The extensive generation of data and content on the internet
                   has given rise to a need for text summarization to generate
                   efficiency and reduce reading time. This is well demonstrated
@@ -156,17 +158,19 @@
                 </p>
               </div>
             </div>
-            <div class="flex gap-4 border border-gray-400 p-4 sm:rounded">
+            <div
+              class="flex md:flex-row gap-4 border border-gray-400 p-4 sm:rounded sm:flex-col"
+            >
               <div>
                 <img
-                  class="w-56 h-11"
+                  class="md:w-56 h-11"
                   src="/src/img/icon-area (4).png"
                   alt=""
                 />
               </div>
               <div>
-                <h3 class="text-xl font-bold mb-2">Text Classification</h3>
-                <p>
+                <h3 class="text-lg font-semibold mb-2">Text Classification</h3>
+                <p class="text-base text-gray-500">
                   Text can be an extremely rich source of information, but
                   extracting insights from it can be hard and time-consuming,
                   due to its unstructured nature. WIth text classification a set
@@ -176,17 +180,21 @@
                 </p>
               </div>
             </div>
-            <div class="flex gap-4 border border-gray-400 p-4 sm:rounded">
+            <div
+              class="flex md:flex-row gap-4 border border-gray-400 p-4 sm:rounded sm:flex-col"
+            >
               <div>
                 <img
-                  class="w-64 h-11"
+                  class="md:w-64 h-11"
                   src="/src/img/icon-area (3).png"
                   alt=""
                 />
               </div>
               <div>
-                <h3 class="text-xl font-bold mb-2">Named entity recognition</h3>
-                <p>
+                <h3 class="text-lg font-semibold mb-2">
+                  Named entity recognition
+                </h3>
+                <p class="text-base text-gray-500">
                   Named entity recognition (NER) is being used heavily in the
                   industries today to automate major categorization of data for
                   unstructured text and datasets. NER seeks to locate and
@@ -197,17 +205,21 @@
                 </p>
               </div>
             </div>
-            <div class="flex gap-4 border border-gray-400 p-4 sm:rounded">
+            <div
+              class="flex md:flex-row gap-4 border border-gray-400 p-4 sm:rounded sm:flex-col"
+            >
               <div>
                 <img
-                  class="w-64 h-11"
+                  class="md:w-64 h-11"
                   src="/src/img/icon-area (2).png"
                   alt=""
                 />
               </div>
               <div>
-                <h3 class="text-xl font-bold mb-2">Grammar Correction Tools</h3>
-                <p>
+                <h3 class="text-lg font-semibold mb-2">
+                  Grammar Correction Tools
+                </h3>
+                <p class="text-base text-gray-500">
                   We often encounter grammatical errors when writing an email or
                   an imperative document. This usually causes us to spend a
                   large amount of effort and time on finding and correcting the
@@ -218,17 +230,19 @@
                 </p>
               </div>
             </div>
-            <div class="flex gap-4 border border-gray-400 p-4 sm:rounded">
+            <div
+              class="flex md:flex-row gap-4 border border-gray-400 p-4 sm:rounded sm:flex-col"
+            >
               <div>
                 <img
-                  class="w-56 h-11"
+                  class="md:w-56 h-11"
                   src="/src/img/icon-area (1).png"
                   alt=""
                 />
               </div>
               <div>
-                <h3 class="text-xl font-bold mb-2">Text Generation</h3>
-                <p>
+                <h3 class="text-lg font-semibold mb-2">Text Generation</h3>
+                <p class="text-base text-gray-500">
                   Text generation helps in writing/producing high-quality
                   content quickly and efficiently. Generating text provides a
                   simple step to ensure that you can create something with as
@@ -243,12 +257,12 @@
         <!--section two end-->
         <!--section three start-->
         <section
-          class="mx-8 grid lg:grid-cols-2 items-center lg:gap-4 pb-20 gap-10"
+          class="px-8 py-32 grid md:grid-cols-2 items-center lg:gap-4 gap-10 bg-gray-50"
         >
           <div class="">
-            <h2 class="text-base uppercase text-green-800 mb-2">Demos</h2>
-            <h1 class="text-4xl font-bold mb-4">Fonimu Use Cases</h1>
-            <p class="mb-8">
+            <h2 class="text-lg uppercase text-green-800 mb-2">Demos</h2>
+            <h1 class="text-2xl font-bold mb-4">Fonimu Use Cases</h1>
+            <p class="mb-8 text-base">
               We are fostering some of the great work in African NLP especially
               in Swahili. We Try some of the demos of the use cases that we have
               been working on so far.
@@ -270,21 +284,23 @@
                 />
               </svg>
 
-              <a class="text-xs text-green-700" href="#">Try some Demos</a>
+              <a class="text-green-700" href="#">Try some Demos</a>
             </div>
           </div>
-          <div class="">
+          <div class="border border-gray-400 rounded-lg p-2 shadow-lg">
             <div class="flex items-center justify-between px-4 mb-8">
               <div>
-                <p class="text-xl">Text autocompletion</p>
-                <p class="text-xs font-bold text-green-700">
+                <p class="text-base font-bold">Text autocompletion</p>
+                <p class="text-sm font-semibold text-green-700">
                   swahili text autocomplete demo
                 </p>
               </div>
-              <div class="border border-gray-400 py-2 px-4 rounded-lg">
-                <a href="#">Examples </a>
+              <div
+                class="flex items-center border border-gray-400 lg:py-2 lg:px-4 md:p-1 sm:p-2 rounded-lg"
+              >
+                <a class="" href="#">Examples </a>
                 <svg
-                  class="inline-block h-3"
+                  class="ml-1 h-4"
                   xmlns="http://www.w3.org/2000/svg"
                   fill="none"
                   viewBox="0 0 24 24"
@@ -300,13 +316,13 @@
                 </svg>
               </div>
             </div>
-            <div class="border border-gray-400 pb-16 pr-4 pl-1 pt-2 rounded-lg">
-              <div class="border border-gray-400 rounded-lg h-32">
+            <div class="pb-16 pr-4 pl-1 pt-2">
+              <div class="border border-gray-400 rounded-lg h-32 shadow-inner">
                 <p class="ml-2">
                   Juma alicheka kwa ngl<span class="text-green-700">uvu</span>
                 </p>
                 <div class="border border-gray-400 w-16 ml-32 rounded-lg">
-                  <p class="text-sm">ovu</p>
+                  <p class="text-base">ovu</p>
                   <p>ombe</p>
                 </div>
               </div>
