responsive for section four is done

--- a/src/index.html
+++ b/src/index.html
@@ -341,30 +341,25 @@
         </section>
         <!--section three end-->
         <!--section four start-->
-        <section
-          class="mx-8 grid lg:grid-cols-2 items-center lg:gap-4 pb-20 gap-10"
-        >
+        <section class="mx-8 grid md:grid-cols-2 items-center py-32 gap-10">
           <div>
             <img class="" src="/src/img/Macbook.png" alt="" />
           </div>
           <div>
             <div class="">
-              <h2 class="text-base uppercase text-green-800 mb-2">Datasets</h2>
-              <h1 class="text-4xl font-bold mb-4">Swahili Datasets</h1>
-              <p class="mb-4">
+              <h2 class="text-lg uppercase text-green-800 mb-2">Datasets</h2>
+              <h1 class="text-2xl font-bold mb-4">Swahili Datasets</h1>
+              <p class="text-base mb-4 text-gray-500">
                 Datasets play a crucial role in developing accurate models. The
-                <br />quality and quantity of the data used impacts the model's
-                <br />
+                quality and quantity of the data used impacts the model's
                 performance. Fonimu API leverages the use of annotated corpora,
-                <br />
                 question-answering datasets, and sentiment analysis datasets.
               </p>
-              <span
+              <span class="text-base text-gray-500"
                 >With the availability of Fonimu datasets, researchers and
-                developers <br />
-                can create new models in swahili
+                developers can create new models in swahili
               </span>
-              <div class="flex items-center lg:justify-end mt-4">
+              <div class="flex items-center mt-4">
                 <svg
                   class="w-6 mr-4 text-green-800"
                   xmlns="http://www.w3.org/2000/svg"
@@ -381,7 +376,7 @@
                   />
                 </svg>
 
-                <a class="text-xs text-green-700" href="#">Try some Demos</a>
+                <a class="text-green-700" href="#">Try some Demos</a>
               </div>
             </div>
           </div>
