responsive for section five is done

--- a/src/index.html
+++ b/src/index.html
@@ -383,11 +383,11 @@
         </section>
         <!--section four end-->
         <!--section five start-->
-        <section class="py-20 bg-gray-300">
-          <h1 class="text-4xl font-bold mb-8 text-center">
+        <section class="py-32 bg-gray-50">
+          <h1 class="text-2xl font-bold mb-8 text-center">
             Frequently Asked Questions
           </h1>
-          <div class="grid lg:grid-cols-2 gap-4 px-8">
+          <div class="grid md:grid-cols-2 gap-4 px-8 text-base">
             <div
               class="bg-white rounded flex items-center justify-between px-2 py-4"
             >
