responsive for section six is done

--- a/src/index.html
+++ b/src/index.html
@@ -102,7 +102,7 @@
               <h3 class="text-lg font-semibold mb-2">
                 Let us share with you a little bit of history.
               </h3>
-              <p class="text-base mb-4 text-gray-500">
+              <p class="text-base mb-4">
                 Fonimu was founded by a group of enthusiasts who believe NLP can
                 revolutionize access to services in Africa. This has been the
                 core of our drive. Today, we are a community solving the
@@ -545,20 +545,22 @@
         <!--section five end-->
         <!--section six start-->
         <section
-          class="grid lg:grid-cols-2 grid-cols-1 lg:gap-4 mx-8 py-20 gap-10"
+          class="grid md:grid-cols-2 grid-cols-1 lg:gap-4 mx-8 py-20 gap-10"
         >
           <div>
             <img src="/src/img/illustration.png" alt="" />
           </div>
           <div class="">
             <div class="mb-8">
-              <h1 class="uppercase text-base font-bold mb-1">Any questions?</h1>
-              <h2 class="text-5xl font-bold">Drop us a line</h2>
+              <h1 class="uppercase text-lg text-[#2E6D64] mb-1">
+                Any questions?
+              </h1>
+              <h2 class="text-2xl font-bold">Drop us a line</h2>
             </div>
             <div class="mb-5">
-              <div class="grid grid-cols-2 gap-4 mb-4">
+              <div class="grid md:grid-cols-2 gap-4 mb-4">
                 <div>
-                  <p class="mb-2 text-gray-500">First Name*</p>
+                  <p class="mb-2">First Name*</p>
                   <input
                     class="w-full p-2 border border-gray-300 rounded outline-none"
                     type="text"
@@ -566,7 +568,7 @@
                   />
                 </div>
                 <div>
-                  <p class="mb-2 text-gray-500">Last Name*</p>
+                  <p class="mb-2">Last Name*</p>
                   <input
                     class="w-full p-2 border border-gray-300 rounded outline-none"
                     type="text"
@@ -574,7 +576,7 @@
                   />
                 </div>
                 <div>
-                  <p class="mb-2 text-gray-500">Email*</p>
+                  <p class="mb-2">Email*</p>
                   <input
                     class="w-full p-2 border border-gray-300 rounded outline-none"
                     type="text"
@@ -582,7 +584,7 @@
                   />
                 </div>
                 <div>
-                  <p class="mb-2 text-gray-500">Phone*</p>
+                  <p class="mb-2">Phone*</p>
                   <input
                     class="w-full p-2 border border-gray-300 rounded outline-none"
                     type="text"
@@ -591,7 +593,7 @@
                 </div>
               </div>
               <div>
-                <p class="mb-2 text-gray-500">Message*</p>
+                <p class="mb-2">Message*</p>
                 <input
                   class="pt-2 pb-20 pl-2 border border-gray-300 w-full outline-none rounded"
                   type="text"
@@ -599,19 +601,19 @@
                 />
               </div>
             </div>
-            <div class="grid grid-cols-3 items-center justify-start">
+            <div class="flex items-center md:flex-wrap">
               <div class="mr-8 sm:mr-0 sm:w-max">
                 <input type="checkbox" />
               </div>
-              <div class="-ml-44 sm:-ml-36 sm:w-max">
+              <div class="">
                 <p class="text-base">
                   I agree to receive communications from Fonimu
                 </p>
               </div>
 
-              <div class="justify-self-end">
+              <div class="sm:block">
                 <a
-                  class="text-base text-white px-4 py-2 rounded bg-green-700"
+                  class="inline-block text-base text-white p-2 rounded bg-green-700"
                   href="#"
                   >Send Message</a
                 >
