responsive for footer section is done

--- a/src/index.html
+++ b/src/index.html
@@ -624,30 +624,32 @@
         <!--section six end-->
         <!--section footer start-->
         <footer
-          class="flex justify-center mx-8 py-5 border-t border-gray-300 md:justify-between flex-col md:flex-row place-items-center gap-10"
+          class="flex md:justify-between md:flex-row sm:flex-col gap-10 mx-8 border-t border-gray-300 py-10"
         >
-          <div class="flex flex-col gap-4 items-center justify-items-center">
+          <div class="flex flex-col gap-4">
             <div class="flex items-center">
               <img class="h-5" src="/src/img/g52.png" alt="logo" />
               <span class="text-lg font-bold ml-1">Fonimu</span>
             </div>
-            <p class="text-sm">A Swahili NLP hub for everyone -</p>
+            <p class="text-base font-light text-gray-500">
+              A Swahili NLP hub for everyone -
+            </p>
             <div class="flex items-center justify-between w-24">
               <img src="/src/img/052-linkedin.png" alt="linkedin" />
               <img src="/src/img/096-twitter.png" alt="twitter" />
               <img src="/src/img/025-messenger.png" alt="messenger" />
             </div>
           </div>
-          <div class="lg:flex gap-20 sm:grid grid-cols-2 justify-items-center">
+          <div class="grid md:grid-cols-4">
             <div>
-              <h1 class="font-bold mb-4">Company</h1>
+              <h1 class="text-base font-bold mb-4">Company</h1>
               <p class="text-sm mb-4">About Us</p>
               <p class="text-sm mb-4">Careers</p>
               <p class="text-sm mb-4">Blog</p>
             </div>
             <div>
               <div>
-                <h1 class="font-bold mb-4">Product</h1>
+                <h1 class="text-base font-bold mb-4">Product</h1>
                 <p class="text-sm mb-4">Api</p>
                 <p class="text-sm mb-4">Models</p>
                 <p class="text-sm mb-4">Data set</p>
@@ -656,14 +658,14 @@
             </div>
             <div>
               <div>
-                <h1 class="font-bold mb-4">Resources</h1>
+                <h1 class="text-base font-bold mb-4">Resources</h1>
                 <p class="text-sm mb-4">Terms & Conditions</p>
                 <p class="text-sm mb-4">Privacy Policy</p>
                 <p class="text-sm mb-4">Lorem Lipsum</p>
               </div>
             </div>
             <div>
-              <h1 class="font-bold mb-4">Contact Us</h1>
+              <h1 class="text-base font-bold mb-4">Contact Us</h1>
               <p class="flex gap-1 text-sm mb-4">
                 <span>
                   <svg
