changing the path of images

--- a/src/index.html
+++ b/src/index.html
@@ -12,14 +12,14 @@
       <!--header start-->
       <header
         class="text-white bg-cover md:h-headerh sm:h-headerh sm:pb-20 rounded-b-lg"
-        style="background-image: url(/src/img/Path.png)"
+        style="background-image: url(./img/Path.png)"
       >
         <!--nav start-->
         <nav class="text-white">
           <div class="flex items-center justify-between p-8">
             <div class="flex items-center justify-between sm:w-full md:w-max">
               <div class="flex items-center">
-                <img class="h-5" src="/src/img/Group 1.png" alt="logo" />
+                <img class="h-5" src="./img/Group 1.png" alt="logo" />
                 <h1 class="ml-2 text-2xl font-bold">Fonimu</h1>
               </div>
 
@@ -83,7 +83,7 @@
         <div class="relative hidden md:block">
           <img
             class="absolute w-full object-cover"
-            src="/src/img/screen1 1.png"
+            src="./img/screen1 1.png"
             alt=""
           />
         </div>
@@ -95,7 +95,7 @@
         <section class="mx-8 md:pt-72">
           <div class="grid md:grid-cols-2 gap-10 sm:grid-cols-1 sm:gap-10">
             <div class="">
-              <img class="w-full" src="/src/img/Capture1.PNG" alt="" />
+              <img class="w-full" src="./img/Capture1.PNG" alt="" />
             </div>
             <div class="">
               <h2 class="text-lg uppercase text-green-800 mb-2">About us</h2>
@@ -142,7 +142,7 @@
               <div>
                 <img
                   class="md:w-56 h-11"
-                  src="/src/img/icon-area (5).png"
+                  src="./img/icon-area (5).png"
                   alt=""
                 />
               </div>
@@ -164,7 +164,7 @@
               <div>
                 <img
                   class="md:w-56 h-11"
-                  src="/src/img/icon-area (4).png"
+                  src="./img/icon-area (4).png"
                   alt=""
                 />
               </div>
@@ -186,7 +186,7 @@
               <div>
                 <img
                   class="md:w-64 h-11"
-                  src="/src/img/icon-area (3).png"
+                  src="./img/icon-area (3).png"
                   alt=""
                 />
               </div>
@@ -211,7 +211,7 @@
               <div>
                 <img
                   class="md:w-64 h-11"
-                  src="/src/img/icon-area (2).png"
+                  src="./img/icon-area (2).png"
                   alt=""
                 />
               </div>
@@ -236,7 +236,7 @@
               <div>
                 <img
                   class="md:w-56 h-11"
-                  src="/src/img/icon-area (1).png"
+                  src="./img/icon-area (1).png"
                   alt=""
                 />
               </div>
@@ -343,7 +343,7 @@
         <!--section four start-->
         <section class="mx-8 grid md:grid-cols-2 items-center py-32 gap-10">
           <div>
-            <img class="" src="/src/img/Macbook.png" alt="" />
+            <img class="" src="./img/Macbook.png" alt="" />
           </div>
           <div>
             <div class="">
@@ -548,7 +548,7 @@
           class="grid md:grid-cols-2 grid-cols-1 lg:gap-4 mx-8 py-20 gap-10"
         >
           <div>
-            <img src="/src/img/illustration.png" alt="" />
+            <img src="./img/illustration.png" alt="" />
           </div>
           <div class="">
             <div class="mb-8">
@@ -628,16 +628,16 @@
         >
           <div class="flex flex-col gap-4">
             <div class="flex items-center">
-              <img class="h-5" src="/src/img/g52.png" alt="logo" />
+              <img class="h-5" src="./img/g52.png" alt="logo" />
               <span class="text-lg font-bold ml-1">Fonimu</span>
             </div>
             <p class="text-base font-light text-gray-500">
               A Swahili NLP hub for everyone -
             </p>
             <div class="flex items-center justify-between w-24">
-              <img src="/src/img/052-linkedin.png" alt="linkedin" />
-              <img src="/src/img/096-twitter.png" alt="twitter" />
-              <img src="/src/img/025-messenger.png" alt="messenger" />
+              <img src="./img/052-linkedin.png" alt="linkedin" />
+              <img src="./img/096-twitter.png" alt="twitter" />
+              <img src="./img/025-messenger.png" alt="messenger" />
             </div>
           </div>
           <div class="grid md:grid-cols-4">
