--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       <!--content wraper-->
       <!--header start-->
       <header
-        class="text-white bg-centers rounded-3xl h-headerh sm:pb-20"
+        class="text-white bg-centers rounded-b-3xl h-headerh sm:pb-20"
         style="background-image: url(./img/Path.png)"
       >
         <!--nav start-->
