--- a/src/index.html
+++ b/src/index.html
@@ -602,7 +602,7 @@
               </div>
             </div>
             <div
-              class="flex md:items-center sm:flex-col md:flex-row sm:items-start"
+              class="flex md:items-center md:justify-between sm:flex-col md:flex-row sm:items-start"
             >
               <div class="flex items-center">
                 <div class="mr-8 sm:mr-0 sm:w-max">
