making final corrections

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
         <!--nav start-->
         <nav class="text-white">
           <div class="flex items-center justify-between p-8">
-            <div class="flex items-center justify-between sm:w-full md:w-max">
+            <div class="flex items-center justify-between w-full md:w-max">
               <div class="flex items-center">
                 <img class="h-5" src="./img/Group 1.png" alt="logo" />
                 <h1 class="ml-2 text-2xl font-bold">Fonimu</h1>
@@ -42,7 +42,7 @@
                 </svg>
               </div>
             </div>
-            <div class="sm:hidden md:block">
+            <div class="hidden md:block">
               <ul class="flex text-white text-base font-light">
                 <li class="mr-8 text-base">
                   <a class="text-base" href="#">
@@ -94,7 +94,7 @@
         <!--section one start-->
         <section class="mx-8 md:pt-72">
           <div class="grid md:grid-cols-2 gap-10 sm:grid-cols-1 sm:gap-10">
-            <div class="">
+            <div class="pt-12">
               <img class="w-full" src="./img/Capture1.PNG" alt="" />
             </div>
             <div class="">
@@ -137,7 +137,7 @@
           </div>
           <div class="grid md:grid-cols-2 gap-4 mb-4">
             <div
-              class="flex md:flex-row gap-4 border border-gray-400 p-4 sm:rounded sm:flex-col"
+              class="flex md:flex-row gap-4 border border-gray-400 p-4 sm:rounded flex-col"
             >
               <div>
                 <img
@@ -146,7 +146,7 @@
                   alt=""
                 />
               </div>
-              <div>
+              <div class="">
                 <h3 class="text-lg font-semibold mb-2">Text Summarisation</h3>
                 <p class="text-base text-gray-500">
                   The extensive generation of data and content on the internet
@@ -159,7 +159,7 @@
               </div>
             </div>
             <div
-              class="flex md:flex-row gap-4 border border-gray-400 p-4 sm:rounded sm:flex-col"
+              class="flex md:flex-row gap-4 border border-gray-400 p-4 sm:rounded flex-col"
             >
               <div>
                 <img
@@ -168,7 +168,7 @@
                   alt=""
                 />
               </div>
-              <div>
+              <div class="">
                 <h3 class="text-lg font-semibold mb-2">Text Classification</h3>
                 <p class="text-base text-gray-500">
                   Text can be an extremely rich source of information, but
@@ -181,7 +181,7 @@
               </div>
             </div>
             <div
-              class="flex md:flex-row gap-4 border border-gray-400 p-4 sm:rounded sm:flex-col"
+              class="flex md:flex-row gap-4 border border-gray-400 p-4 sm:rounded flex-col"
             >
               <div>
                 <img
@@ -190,7 +190,7 @@
                   alt=""
                 />
               </div>
-              <div>
+              <div class="">
                 <h3 class="text-lg font-semibold mb-2">
                   Named entity recognition
                 </h3>
@@ -206,7 +206,7 @@
               </div>
             </div>
             <div
-              class="flex md:flex-row gap-4 border border-gray-400 p-4 sm:rounded sm:flex-col"
+              class="flex md:flex-row gap-4 border border-gray-400 p-4 sm:rounded flex-col"
             >
               <div>
                 <img
@@ -215,7 +215,7 @@
                   alt=""
                 />
               </div>
-              <div>
+              <div class="">
                 <h3 class="text-lg font-semibold mb-2">
                   Grammar Correction Tools
                 </h3>
@@ -231,16 +231,16 @@
               </div>
             </div>
             <div
-              class="flex md:flex-row gap-4 border border-gray-400 p-4 sm:rounded sm:flex-col"
+              class="flex md:flex-row gap-4 border border-gray-400 p-4 sm:rounded flex-col"
             >
-              <div>
+              <div class="">
                 <img
                   class="md:w-56 h-11"
                   src="./img/icon-area (1).png"
                   alt=""
                 />
               </div>
-              <div>
+              <div class="">
                 <h3 class="text-lg font-semibold mb-2">Text Generation</h3>
                 <p class="text-base text-gray-500">
                   Text generation helps in writing/producing high-quality
@@ -296,24 +296,12 @@
                 </p>
               </div>
               <div
-                class="flex items-center border border-gray-400 lg:py-2 lg:px-4 md:p-1 sm:p-2 rounded-lg"
+                class="flex items-center border border-gray-400 lg:py-2 lg:px-4 md:p-1 p-2 rounded-lg"
               >
-                <a class="" href="#">Examples </a>
-                <svg
-                  class="ml-1 h-4"
-                  xmlns="http://www.w3.org/2000/svg"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke-width="1.5"
-                  stroke="currentColor"
-                  class="size-6"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="m19.5 8.25-7.5 7.5-7.5-7.5"
-                  />
-                </svg>
+                <form>
+                  <span>Examples</span>
+                  <select class="outline-none"></select>
+                </form>
               </div>
             </div>
             <div class="pb-16 pr-4 pl-1 pt-2">
@@ -331,9 +319,9 @@
                   Text Generated <span class="text-green-500">: uvu</span>
                 </p>
                 <a
-                  class="px-3 py-2 bg-gray-500 text-white rounded-full mt-2"
+                  class="px-4 py-2 bg-[#2E6D64] text-white rounded-lg mt-2"
                   href=""
-                  >computer</a
+                  >compute</a
                 >
               </div>
             </div>
@@ -602,20 +590,20 @@
               </div>
             </div>
             <div
-              class="flex md:items-center md:justify-between sm:flex-col md:flex-row sm:items-start"
+              class="flex md:items-center md:justify-between flex-col md:flex-row sm:items-start"
             >
               <div class="flex items-center">
                 <div class="mr-8 sm:mr-0 sm:w-max">
                   <input type="checkbox" />
                 </div>
-                <div class="">
+                <div class="ml-4">
                   <p class="text-base">
                     I agree to receive communications from Fonimu
                   </p>
                 </div>
               </div>
               <a
-                class="mt-2 inline-block text-base text-white p-2 rounded-full bg-[#2E6D64] sm:w-full md:w-max text-center"
+                class="mt-2 inline-block text-base text-white py-2 px-4 rounded-full bg-[#2E6D64] sm:w-full md:w-max text-center"
                 href="#"
                 >Send Message</a
               >
@@ -625,7 +613,7 @@
         <!--section six end-->
         <!--section footer start-->
         <footer
-          class="flex md:justify-between md:flex-row sm:flex-col gap-10 mx-8 border-t border-gray-300 py-10"
+          class="flex md:justify-between md:flex-row flex-col gap-10 mx-8 border-t border-gray-300 py-10"
         >
           <div class="flex flex-col gap-4">
             <div class="flex items-center">
