nav and first div is done

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
                   <a href="#"><span>Demo</span></a>
                 </li>
                 <li class="mr-8">
-                  <a href="#"><span>Datasets</span></a>
+                  <a href="./usecases.html"><span>Datasets</span></a>
                 </li>
                 <li>
                   <a href="#"><span>Contact Us</span></a>
