--- a/src/usecases.html
+++ b/src/usecases.html
@@ -15,7 +15,9 @@
             <h1 class="ml-2 text-2xl font-bold">Fonimu</h1>
           </div>
 
-          <div class="cursor-pointer md:hidden p-2 rounded-full bg-[#2E6D64]">
+          <div
+            class="text-white cursor-pointer md:hidden p-2 rounded-full bg-[#2E6D64]"
+          >
             <svg
               xmlns="http://www.w3.org/2000/svg"
               fill="none"
@@ -59,12 +61,37 @@
     </nav>
     <!--nav end-->
     <!--first div start-->
-    <div class="flex justify-between mt-6 mb-10 mx-20">
-      <form class="flex items-center bg-gray-300" action="#">
-        <input class="bg-gray-300 w-80" type="search" id="search" />
-        <button class="p-2 bg-gray-400">
+    <div class="mt-6 mb-6 mx-10 md:mx-20">
+      <div class="flex justify-between">
+        <form class="flex items-center bg-gray-300" action="#">
+          <input
+            class="bg-gray-300 w-40 sm:w-80 outline-none"
+            type="search"
+            id="search"
+          />
+          <button class="p-2 bg-gray-400">
+            <svg
+              class="h-5"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="size-6"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
+              />
+            </svg>
+          </button>
+        </form>
+
+        <div class="flex items-center">
+          <span class="text-sm text-green-800 mr-3">Share</span>
           <svg
-            class="h-5"
+            class="text-green-800 h-5"
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewBox="0 0 24 24"
@@ -75,31 +102,199 @@
             <path
               stroke-linecap="round"
               stroke-linejoin="round"
-              d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
+              d="M7.217 10.907a2.25 2.25 0 1 0 0 2.186m0-2.186c.18.324.283.696.283 1.093s-.103.77-.283 1.093m0-2.186 9.566-5.314m-9.566 7.5 9.566 5.314m0 0a2.25 2.25 0 1 0 3.935 2.186 2.25 2.25 0 0 0-3.935-2.186Zm0-12.814a2.25 2.25 0 1 0 3.933-2.185 2.25 2.25 0 0 0-3.933 2.185Z"
             />
           </svg>
-        </button>
-      </form>
-
-      <div class="flex items-center">
-        <span class="text-sm text-green-800 mr-3">Share</span>
-        <svg
-          class="text-green-800 h-5"
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke-width="1.5"
-          stroke="currentColor"
-          class="size-6"
+        </div>
+      </div>
+      <div class="mt-14 hidden sm:block">
+        <img class="rounded-lg" src="./img/Capture.PNG" alt="" />
+      </div>
+      <div
+        class="flex flex-wrap gap-2 mt-12 pb-6 px-3 border-b border-gray-200"
+      >
+        <a
+          class="bg-[#571217] text-white rounded-full text-sm px-4 py-2"
+          href=""
+          >All Datasets</a
         >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            d="M7.217 10.907a2.25 2.25 0 1 0 0 2.186m0-2.186c.18.324.283.696.283 1.093s-.103.77-.283 1.093m0-2.186 9.566-5.314m-9.566 7.5 9.566 5.314m0 0a2.25 2.25 0 1 0 3.935 2.186 2.25 2.25 0 0 0-3.935-2.186Zm0-12.814a2.25 2.25 0 1 0 3.933-2.185 2.25 2.25 0 0 0-3.933 2.185Z"
-          />
-        </svg>
+        <a
+          class="bg-gray-100 text-[#571217] rounded-full text-sm px-4 py-2"
+          href=""
+          >Computer Science</a
+        >
+        <a
+          class="bg-gray-100 text-[#571217] rounded-full text-sm px-4 py-2"
+          href=""
+          >Education</a
+        >
+        <a
+          class="bg-gray-100 text-[#571217] rounded-full text-sm px-4 py-2"
+          href=""
+          >Computer Vision</a
+        >
+        <a
+          class="bg-gray-100 text-[#571217] rounded-full text-sm px-4 py-2"
+          href=""
+          >Natural Language Processing</a
+        >
+        <a
+          class="bg-gray-100 text-[#571217] rounded-full text-sm px-4 py-2"
+          href=""
+          >Healthcare</a
+        >
+        <a
+          class="bg-gray-100 text-[#571217] rounded-full text-sm px-4 py-2"
+          href=""
+          >Finance</a
+        >
+        <a
+          class="bg-gray-100 text-[#571217] rounded-full text-sm px-4 py-2"
+          href=""
+          >Image to Image</a
+        >
+        <a
+          class="bg-gray-100 text-[#571217] rounded-full text-sm px-4 py-2"
+          href=""
+          >Summarization</a
+        >
+        <a
+          class="bg-gray-100 text-[#571217] rounded-full text-sm px-4 py-2"
+          href=""
+          >Pre-Trained</a
+        >
+        <a
+          class="bg-gray-100 text-[#571217] rounded-full text-sm px-4 py-2"
+          href=""
+          >Translation</a
+        >
+        <a
+          class="bg-gray-100 text-[#571217] rounded-full text-sm px-4 py-2"
+          href=""
+          >Image Classification</a
+        >
+        <a
+          class="bg-gray-100 text-[#571217] rounded-full text-sm px-4 py-2"
+          href=""
+          >Text Classification</a
+        >
+        <a
+          class="bg-gray-100 text-[#571217] rounded-full text-sm px-4 py-2"
+          href=""
+          >Object</a
+        >
+        <a
+          class="bg-gray-100 text-[#571217] rounded-full text-sm px-4 py-2"
+          href=""
+          >Audio</a
+        >
+        <a
+          class="bg-gray-100 text-[#571217] rounded-full text-sm px-4 py-2"
+          href=""
+          >Education</a
+        >
+        <a
+          class="bg-gray-100 text-[#571217] rounded-full text-sm px-4 py-2"
+          href=""
+          >Computer Vision</a
+        >
       </div>
     </div>
+
     <!--first div end-->
+    <!--second div start-->
+    <div
+      class="grid grid-cols-1 lg:grid-cols-2 w-max gap-4 mx-10 md:mx-20 mb-20"
+    >
+      <div class="flex items-center gap-2 rounded-lg py-4 px-4 bg-gray-100">
+        <div>
+          <img src="./img/datasetIcon.a0e5b395.svg" alt="" />
+        </div>
+        <div>
+          <p class="text-sm font-semibold text-[#571217]">
+            hf-internal-testing/fixtures_image_utils
+          </p>
+          <p class="text-gray-400 text-xs">March 10, 2020</p>
+        </div>
+      </div>
+      <div class="flex items-center gap-2 rounded-lg py-4 px-4 bg-gray-100">
+        <div>
+          <img src="./img/datasetIcon.a0e5b395.svg" alt="" />
+        </div>
+        <div>
+          <p class="text-sm font-semibold text-[#571217]">
+            hf-internal-testing/fixtures_image_utils
+          </p>
+          <p class="text-gray-400 text-xs">March 10, 2020</p>
+        </div>
+      </div>
+      <div class="flex items-center gap-2 rounded-lg py-4 px-4 bg-gray-100">
+        <div>
+          <img src="./img/datasetIcon.a0e5b395.svg" alt="" />
+        </div>
+        <div>
+          <p class="text-sm font-semibold text-[#571217]">
+            hf-internal-testing/fixtures_image_utils
+          </p>
+          <p class="text-gray-400 text-xs">March 10, 2020</p>
+        </div>
+      </div>
+      <div class="flex items-center gap-2 rounded-lg py-4 px-4 bg-gray-100">
+        <div>
+          <img src="./img/datasetIcon.a0e5b395.svg" alt="" />
+        </div>
+        <div>
+          <p class="text-sm font-semibold text-[#571217]">
+            hf-internal-testing/fixtures_image_utils
+          </p>
+          <p class="text-gray-400 text-xs">March 10, 2020</p>
+        </div>
+      </div>
+      <div class="flex items-center gap-2 rounded-lg py-4 px-4 bg-gray-100">
+        <div>
+          <img src="./img/datasetIcon.a0e5b395.svg" alt="" />
+        </div>
+        <div>
+          <p class="text-sm font-semibold text-[#571217]">
+            hf-internal-testing/fixtures_image_utils
+          </p>
+          <p class="text-gray-400 text-xs">March 10, 2020</p>
+        </div>
+      </div>
+      <div class="flex items-center gap-2 rounded-lg py-4 px-4 bg-gray-100">
+        <div>
+          <img src="./img/datasetIcon.a0e5b395.svg" alt="" />
+        </div>
+        <div>
+          <p class="text-sm font-semibold text-[#571217]">
+            hf-internal-testing/fixtures_image_utils
+          </p>
+          <p class="text-gray-400 text-xs">March 10, 2020</p>
+        </div>
+      </div>
+      <div class="flex items-center gap-2 rounded-lg py-4 px-4 bg-gray-100">
+        <div>
+          <img src="./img/datasetIcon.a0e5b395.svg" alt="" />
+        </div>
+        <div>
+          <p class="text-sm font-semibold text-[#571217]">
+            hf-internal-testing/fixtures_image_utils
+          </p>
+          <p class="text-gray-400 text-xs">March 10, 2020</p>
+        </div>
+      </div>
+      <div class="flex items-center gap-2 rounded-lg py-4 px-4 bg-gray-100">
+        <div>
+          <img src="./img/datasetIcon.a0e5b395.svg" alt="" />
+        </div>
+        <div>
+          <p class="text-sm font-semibold text-[#571217]">
+            hf-internal-testing/fixtures_image_utils
+          </p>
+          <p class="text-gray-400 text-xs">March 10, 2020</p>
+        </div>
+      </div>
+    </div>
+    <!--second div end-->
   </body>
 </html>
