changing margins, right and left

--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,7 @@
 
       <main class="lg:pt-36 md:pt-0 sm:pt-14">
         <!--section one start-->
-        <section class="mx-8 md:pt-72">
+        <section class="mx-10 sm:mx-16 md:pt-72">
           <div class="grid md:grid-cols-2 gap-10 sm:grid-cols-1 sm:gap-10">
             <div class="pt-12">
               <img class="w-full" src="./img/Capture1.PNG" alt="" />
@@ -126,7 +126,7 @@
         </section>
         <!--section one end-->
         <!--section two start-->
-        <section class="mx-8 py-32">
+        <section class="mx-8 sm:mx-16 py-32">
           <div class="text-center lg:w-3/4 mx-auto">
             <h1 class="text-2xl font-bold mb-4">Problems we are solving</h1>
             <p class="mb-6 text-xl">
@@ -257,7 +257,7 @@
         <!--section two end-->
         <!--section three start-->
         <section
-          class="px-8 py-32 grid md:grid-cols-2 items-center lg:gap-4 gap-10 bg-gray-50"
+          class="px-8 sm:px-16 py-32 grid md:grid-cols-2 items-center lg:gap-4 gap-10 bg-gray-50"
         >
           <div class="">
             <h2 class="text-lg uppercase text-green-800 mb-2">Demos</h2>
@@ -329,7 +329,9 @@
         </section>
         <!--section three end-->
         <!--section four start-->
-        <section class="mx-8 grid md:grid-cols-2 items-center py-32 gap-10">
+        <section
+          class="mx-8 sm:mx-16 grid md:grid-cols-2 items-center py-32 gap-10"
+        >
           <div>
             <img class="" src="./img/Macbook.png" alt="" />
           </div>
@@ -371,7 +373,7 @@
         </section>
         <!--section four end-->
         <!--section five start-->
-        <section class="py-32 bg-gray-50">
+        <section class="px-8 sm:px-16 py-32 bg-gray-50">
           <h1 class="text-2xl font-bold mb-8 text-center">
             Frequently Asked Questions
           </h1>
@@ -533,7 +535,7 @@
         <!--section five end-->
         <!--section six start-->
         <section
-          class="grid md:grid-cols-2 grid-cols-1 lg:gap-4 mx-8 py-20 gap-10"
+          class="mx-8 sm:mx-16 grid md:grid-cols-2 grid-cols-1 lg:gap-4 py-20 gap-10"
         >
           <div>
             <img src="./img/illustration.png" alt="" />
@@ -613,7 +615,7 @@
         <!--section six end-->
         <!--section footer start-->
         <footer
-          class="flex md:justify-between md:flex-row flex-col gap-10 mx-8 border-t border-gray-300 py-10"
+          class="mx-8 sm:mx-16 flex md:justify-between md:flex-row flex-col gap-10 border-t border-gray-300 py-10"
         >
           <div class="flex flex-col gap-4">
             <div class="flex items-center">
